samples/_failures_safe/1761154461_479d0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed5f7dd5.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ed5f7dd5.c:170:5: error: expected identifier or ‘(’ at end of input
  170 |     int
      |     ^~~
./samples/SAFE/__tmp_ed5f7dd5.c:170:5: error: expected declaration or statement at end of input
